# diningPhilosophersProblem

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Fork.cpp  Fork.h  Philosopher.cpp  Philosopher.h  State.h
